[package]
name = "rogueflow"
version = "0.1.0"
authors = ["dank <git@dank.anonaddy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memflow = "0.1.5"
memflow-win32 = "0.1.5"
log = { version = "0.4", default-features = false }